# ghost-post-api

./: manage.py  pyproject.toml
ghost2/: asgi.py  settings.py  urls.py  wsgi.py
ghost2app/: admin.py  apps.py  models.py
ghost2app/migrations/: 0001_initial.py
ghostapi/: serializers.py  urls.py  views.py
